i added some polyfills to correct usability on ie browser

--- a/src/scss/_faq.scss
+++ b/src/scss/_faq.scss
@@ -16,12 +16,11 @@
   }
   &__mask {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    left: 0;
     z-index: 0;
     width: 100%;
     height: 100%;
-    transform: translate(-50%, -50%);
   }
   &__wrap {
     position: relative;
