--- a/src/scss/_form-component.scss
+++ b/src/scss/_form-component.scss
@@ -55,6 +55,7 @@
     }
 
     &-label {
+      color: $alt-text-color;
       font-size: 0;
       margin: 0;
       padding: 0;
